--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 2.8...3.23.3)
 
 # C++11 Standard verwenden
 set(CMAKE_CXX_STANDARD 11)
