Enhance launch configuration for PRG to WAV conversion and implement conversion functions in main.cpp

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,8 @@
     "type": "cppdbg",
     "request": "launch",
     "program": "${workspaceFolder}/build/c64_tap_tool",
-    "args": ["-a", "${workspaceFolder}/build/ABC-Turbo.tap"],
+    //"args": ["-e", "${workspaceFolder}/build/ABC-Turbo.tap"],
+    "args": ["--conv2wav", "${workspaceFolder}/build/abc-turbo.prg", "${workspaceFolder}/build/abc-turbo.wav"],
     "stopAtEntry": false,
     "cwd": "${workspaceFolder}",
     "environment": [],
