Remove fatal error flag from compiler options for improved build flexibility

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,8 @@ cmake_minimum_required(VERSION 2.8...3.23.3)
 set(CMAKE_CXX_STANDARD 11)
 
 # zusaetzliche Compiler-Optionen
-add_compile_options(-O0 -pedantic -Wfatal-errors -Wall)
+# add_compile_options(-O0 -pedantic -Wfatal-errors -Wall)
+add_compile_options(-O0 -pedantic -Wall)
 add_compile_options(-Wextra -Wshadow -Wconversion -Wno-unused)
 
 # Set the project name
